footer-subscription-block created + some styles added

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           </address>
         </div>
         <div class="footer-socialmedia-block">
-          <p class="footer-socialmedia-claimer">Приєднуйтесь</p>
+          <p class="footer-claimer">Приєднуйтесь</p>
           <ul class="content-list-general footer-socialmedia-list">
             <li class="footer-socialmedia-list-item">
               <a
@@ -580,6 +580,25 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-subscription-block">
+          <p class="footer-claimer">Підпишіться на розсилку</p>
+          <form class="subscription-form">
+            <label for="subsctiption">
+              <input
+                type="email"
+                id="subsctiption"
+                name="subsctiption"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="btn-genera submit-btn">
+              Підписатися<svg class="footer-socialmedia-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
