subscription form input styles added

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,10 @@
     <title>Портфоліо</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -23,18 +26,39 @@
       <div class="container container-header">
         <nav>
           <!--Logo-->
-          <a href="./index.html" class="links-general header-logo-link"><span class="logo-text-accent">Web</span>Studio</a>
+          <a href="./index.html" class="links-general header-logo-link"
+            ><span class="logo-text-accent">Web</span>Studio</a
+          >
           <!--Browser-->
           <ul class="content-list-general">
-            <li><a href="./index.html" class="links-general links-selection header-nav-link">Студія</a></li>
-            <li><a href="./portfolio.html" class="links-general links-selection header-nav-link selected-link">Портфоліо</a></li>
-            <li><a href="#" class="links-general links-selection header-nav-link">Контакти</a></li>
+            <li>
+              <a
+                href="./index.html"
+                class="links-general links-selection header-nav-link"
+                >Студія</a
+              >
+            </li>
+            <li>
+              <a
+                href="./portfolio.html"
+                class="links-general links-selection header-nav-link selected-link"
+                >Портфоліо</a
+              >
+            </li>
+            <li>
+              <a href="#" class="links-general links-selection header-nav-link"
+                >Контакти</a
+              >
+            </li>
           </ul>
         </nav>
         <!--Contact links-->
         <ul class="content-list-general">
           <li>
-            <a href="mailto:info@devstudio.com" class="links-general links-selection header-adress-link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="links-general links-selection header-adress-link"
+            >
               <svg class="header-adress-link-icon">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -42,7 +66,10 @@
             >
           </li>
           <li>
-            <a href="tel:++380961111111" class="links-general links-selection header-adress-link">
+            <a
+              href="tel:++380961111111"
+              class="links-general links-selection header-adress-link"
+            >
               <svg class="header-adress-link-icon">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
@@ -61,12 +88,33 @@
           <!-- Content filter -->
           <ul class="content-list-general portfolio-filter-list">
             <li class="portfolio-filter-list-item">
-              <button type="button" class="btn-general portfolio-filter-btn portfolio-filter-btn-1">Усі</button>
+              <button
+                type="button"
+                class="btn-general portfolio-filter-btn portfolio-filter-btn-1"
+              >
+                Усі
+              </button>
             </li>
-            <li class="portfolio-filter-list-item"><button type="button" class="btn-general portfolio-filter-btn">Веб-сайти</button></li>
-            <li class="portfolio-filter-list-item"><button type="button" class="btn-general portfolio-filter-btn">Додатки</button></li>
-            <li class="portfolio-filter-list-item"><button type="button" class="btn-general portfolio-filter-btn">Дизайн</button></li>
-            <li class="portfolio-filter-list-item"><button type="button" class="btn-general portfolio-filter-btn">Маркетинг</button></li>
+            <li class="portfolio-filter-list-item">
+              <button type="button" class="btn-general portfolio-filter-btn">
+                Веб-сайти
+              </button>
+            </li>
+            <li class="portfolio-filter-list-item">
+              <button type="button" class="btn-general portfolio-filter-btn">
+                Додатки
+              </button>
+            </li>
+            <li class="portfolio-filter-list-item">
+              <button type="button" class="btn-general portfolio-filter-btn">
+                Дизайн
+              </button>
+            </li>
+            <li class="portfolio-filter-list-item">
+              <button type="button" class="btn-general portfolio-filter-btn">
+                Маркетинг
+              </button>
+            </li>
           </ul>
           <!-- Projects display -->
           <ul class="content-list-general portfolio-list">
@@ -74,10 +122,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/technokryak.jpg" alt="Ноутбук з відкритою сторінкою сайту" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/technokryak.jpg"
+                    alt="Ноутбук з відкритою сторінкою сайту"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -98,8 +153,9 @@
                     class="image-display"
                   />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -112,10 +168,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/seafood-resto.jpg" alt="Логотип ресторану морепродуктів" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/seafood-resto.jpg"
+                    alt="Логотип ресторану морепродуктів"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -128,10 +191,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/prime-project.jpg" alt="Ілюстраційне фото навушників" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/prime-project.jpg"
+                    alt="Ілюстраційне фото навушників"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -144,10 +214,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/boxes-projects.jpg" alt="Коробки із рекламним маркуванням" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/boxes-projects.jpg"
+                    alt="Коробки із рекламним маркуванням"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -168,8 +245,9 @@
                     class="image-display"
                   />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -182,10 +260,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/limited-edition-journal.jpg" alt="Розгорнутий журнал" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/limited-edition-journal.jpg"
+                    alt="Розгорнутий журнал"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -198,10 +283,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/lab-project.jpg" alt="Бірка із дизайном бренду" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/lab-project.jpg"
+                    alt="Бірка із дизайном бренду"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -214,10 +306,17 @@
             <li class="portfolio-list-item">
               <a href="#" class="links-general portfolio-item-link">
                 <div class="pic-overlay">
-                  <img src="./images/growing-business-app.jpg" alt="Людина працює за ноутбуком" width="370" height="294" class="image-display" />
+                  <img
+                    src="./images/growing-business-app.jpg"
+                    alt="Людина працює за ноутбуком"
+                    width="370"
+                    height="294"
+                    class="image-display"
+                  />
                   <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні
-                    відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <div class="title-text">
@@ -235,7 +334,9 @@
       <div class="container footer-container">
         <div class="footer-contacts-block">
           <!--Logo-->
-          <a href="./index.html" class="links-general footer-logo-text"><span class="logo-text-accent">Web</span>Studio</a>
+          <a href="./index.html" class="links-general footer-logo-text"
+            ><span class="logo-text-accent">Web</span>Studio</a
+          >
           <!--Footer info-->
           <address>
             <ul class="content-list-general footer-content-list">
@@ -248,37 +349,65 @@
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li><a href="mailto:info@devstudio.com" class="links-general links-selection footer-contacts-link">info@devstudio.com</a></li>
-              <li><a href="tel:++380961111111" class="links-general links-selection footer-contacts-link">+38 096 111 11 11</a></li>
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="links-general links-selection footer-contacts-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a
+                  href="tel:++380961111111"
+                  class="links-general links-selection footer-contacts-link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
             </ul>
           </address>
         </div>
         <div class="footer-socialmedia-block">
-          <p class="footer-socialmedia-claimer">Приєднуйтесь</p>
+          <p class="footer-claimer">Приєднуйтесь</p>
           <ul class="content-list-general footer-socialmedia-list">
             <li class="footer-socialmedia-list-item">
-              <a href="#" aria-label="Посилання на Інстаграм" class="footer-socialmedia-link">
+              <a
+                href="#"
+                aria-label="Посилання на Інстаграм"
+                class="footer-socialmedia-link"
+              >
                 <svg class="footer-socialmedia-icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialmedia-list-item">
-              <a href="#" aria-label="Посилання на Твіттер" class="footer-socialmedia-link">
+              <a
+                href="#"
+                aria-label="Посилання на Твіттер"
+                class="footer-socialmedia-link"
+              >
                 <svg class="footer-socialmedia-icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialmedia-list-item">
-              <a href="#" aria-label="Посилання на Фейсбук" class="footer-socialmedia-link">
+              <a
+                href="#"
+                aria-label="Посилання на Фейсбук"
+                class="footer-socialmedia-link"
+              >
                 <svg class="footer-socialmedia-icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socialmedia-list-item">
-              <a href="#" aria-label="Посилання на Лінкдін" class="footer-socialmedia-link">
+              <a
+                href="#"
+                aria-label="Посилання на Лінкдін"
+                class="footer-socialmedia-link"
+              >
                 <svg class="footer-socialmedia-icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
