.modal-form-textarea:hover, .modal-form-textarea:focus effects added

--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
               id="email"
               name="email"
               class="modal-form-input"
-              autocomplete="off"
+             autocomplete="off"
               required
             />
             <div class="modal-form-icon-wrapper">
@@ -670,14 +670,16 @@
             id="comment"
             rows="7"
             placeholder="Введіть текст"
+            class="modal-form-textarea"
           ></textarea>
           <div class="modal-checkbox-wrapper">
-            <label for="agreement" class="modal-checkbox-label">
+            <label for="accept" class="modal-checkbox-label">
               <input
                 type="checkbox"
-                name="agreement"
-                id="agreement"
-                value="agreed"
+                name="accept"
+                id="accept"
+                value="accept"
+                required
               />
               Погоджуюся з розсилкою та приймаю
               <a href="#" class="links-general links-selection"
