--- a/portfolio.html
+++ b/portfolio.html
@@ -415,6 +415,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscription-block">
+          <p class="footer-claimer">Підпишіться на розсилку</p>
+          <form action="javascript:void(0);" class="subscription-form">
+            <label for="subsctiption">
+              <input
+                type="email"
+                id="subsctiption"
+                name="subsctiption"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="btn-genera submit-btn">
+              Підписатися<svg class="footer-socialmedia-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
