footer input text-color changed, .modal-submit-btn added

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
               ></label
             >
           </div>
-          <button class="btn-genera submit-btn">Відправити</button>
+          <button class="btn-genera modal-submit-btn">Відправити</button>
         </form>
       </div>
     </div>
