modal window checkbox icon edited, styles added

--- a/index.html
+++ b/index.html
@@ -670,10 +670,12 @@
                 id="accept"
                 value="accept"
                 required
+                class="visually-hidden checkbox-mark"
               />
-              Погоджуюся з розсилкою та приймаю
-              <a href="#" class="links-general links-selection"
-                >Умови договору</a
+              <svg class="checkbox-mark-icon">
+                <use href="./images/icons.svg#icon-modal-check"></use>
+              </svg>Погоджуюся з розсилкою та приймаю <a href="#" class="links-general links-selection"
+                > Умови договору</a
               ></label
             >
           </div>
