class is-hidden added to modal overlay

--- a/index.html
+++ b/index.html
@@ -602,8 +602,7 @@
         </div>
       </div>
     </footer>
-    <!-- is-hidden -->
-    <div class="modal-overlay" data-modal>
+    <div class="modal-overlay is-hidden" data-modal>
       <div class="modal-window">
         <button data-modal-close class="modal-close-btn">
           <svg class="modal-close-btn-icon">
